[metadata]
name = snowcloud
version = 0.1.2
author = Brooke Chalmers
author_email = breq@breq.dev
description = A service for generating unique, time-ordered IDs across distributed worker processes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/breq16/snowcloud
project_urls =
    Bug Tracker = https://github.com/breq16/snowcloud/issues
classifiers =
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Database

[options]
packages = find:
python_requires = >=3.8
